<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <es.gdebustamante.inadraft.ui.view.preference.CustomHeaderAboutAppPreference
        android:layout="@layout/preference_about_app_header"
        app:persistent="false"/>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/category_information">

        <Preference
            android:icon="@drawable/ic__rate__app_google_play"
            android:key="pref_rate_app"
            android:summary="@string/rate_app_summary"
            android:title="@string/rate_app_title"
            app:iconSpaceReserved="true" />

        <Preference
            android:icon="@drawable/ic_privacy_tip__license_policity"
            android:key="pref_open_policy"
            android:summary="@string/privacy_policy_summary"
            android:title="@string/privacy_policy_title"
            app:iconSpaceReserved="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_dev"
        app:iconSpaceReserved="false">

        <Preference
            android:icon="@drawable/ic__more_apps__developer"
            android:summary="@string/other_apps_summary"
            android:title="@string/other_apps_title"
            app:iconSpaceReserved="true">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/other_apps_link" />

        </Preference>

        <Preference
            android:icon="@drawable/ic__github__go_github"
            android:summary="@string/follow_github_summary"
            android:title="@string/follow_twitter_title"
            app:iconSpaceReserved="true">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/follow_github_link" />
        </Preference>

        <Preference
            android:layout_height="wrap_content"
            android:icon="@drawable/ic__linkedin__go_linkedin"
            android:summary="@string/developer_page_summary"
            android:title="@string/developer_page_title"
            app:iconSpaceReserved="true">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/linkedin_page_link" />
        </Preference>

        <Preference
            android:icon="@drawable/ic__email__contact_developer"
            android:key="send_mail_to_dev"
            android:summary="@string/email_contact_summary"
            android:title="@string/email_contact_title"
            app:iconSpaceReserved="true" />

    </PreferenceCategory>

</PreferenceScreen>