<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic__home__app_start"
            app:showAsAction="ifRoom"
            android:title="@string/menu_activity_main_drawer__action_home"/>
        <item
            android:id="@+id/rankingFragment"
            android:icon="@drawable/ic__ranking__score_draft"
            app:showAsAction="ifRoom"
            android:title="@string/menu_activity_main_drawer__action_ranking"/>
        <item
            android:id="@+id/infoTeamFragment"
            android:icon="@drawable/ic__people__teams_and_players_information"
            app:showAsAction="ifRoom"
            android:title="@string/menu_activity_main_drawer__action_info"/>
        <item
            android:id="@+id/aboutAppPreferenceFragment"
            android:icon="@drawable/ic__info__about_app"
            app:showAsAction="ifRoom"
            android:title="@string/menu_activity_main_drawer__action_about_app"/>

    </group>
</menu>