<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.germandebustamante.inadraft.presentation.home.HomeFragment"
        android:label="@string/nav_graph__fragment_home__title"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_formationListFragment"
            app:destination="@id/formationListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/infoTeamFragment"
        android:name="com.germandebustamante.inadraft.presentation.information.team.TeamInfoListFragment"
        android:label="@string/nav_graph__fragment_team_info_list__title"
        tools:layout="@layout/fragment_team_info_list">

        <action
            android:id="@+id/action_infoTeamFragment_to_playerListFragment"
            app:destination="@id/playerListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <fragment
        android:id="@+id/playerListFragment"
        android:name="com.germandebustamante.inadraft.presentation.information.player.PlayerInfoListFragment"
        android:label="@string/nav_graph__fragment_player_info_list__title"
        tools:layout="@layout/fragment_player_info_list">

        <argument
            android:name="teamId"
            android:defaultValue="-1"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/rankingFragment"
        android:name="com.germandebustamante.inadraft.presentation.ranking.RankingFragment"
        android:label="@string/nav_graph__fragment_ranking__title"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/aboutAppPreferenceFragment"
        android:name="com.germandebustamante.inadraft.ui.view.preference.AboutAppPreferenceFragment" />

    <fragment
        android:id="@+id/formationListFragment"
        android:name="com.germandebustamante.inadraft.presentation.formation.list.FormationListFragment"
        android:label=""
        tools:layout="@layout/fragment_formation_list">

        <action
            android:id="@+id/action_formationListFragment_to_formation442Fragment"
            app:destination="@id/formation442Fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/formation442Fragment"
        android:name="com.germandebustamante.inadraft.presentation.formation.inner.Formation442Fragment"
        android:label=""
        tools:layout="@layout/fragment_formation442">

        <argument
            android:name="formationId"
            android:defaultValue="-1"
            app:argType="integer" />

        <action
            android:id="@+id/action_formation442Fragment_to_choosePlayerDialog"
            app:destination="@id/choosePlayerDialog"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_formation442Fragment_to_scoreGameDialog"
            app:destination="@id/scoreGameDialog"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <dialog
        android:id="@+id/choosePlayerDialog"
        android:name="com.germandebustamante.inadraft.presentation.playerSelection.PlayerSelectionDialog"
        android:label="dialog_choose_player"
        tools:layout="@layout/dialog_choose_player">

        <argument
            android:name="playerPositionId"
            android:defaultValue=""
            app:argType="string" />

        <argument
            android:name="playerCardId"
            android:defaultValue="-1"
            app:argType="integer" />

    </dialog>

    <dialog
        android:id="@+id/scoreGameDialog"
        android:name="com.germandebustamante.inadraft.presentation.score.ScoreGameDialog"
        android:label="scoreGameDialog"
        tools:layout="@layout/dialog_score_game">

        <argument
            android:name="totalPunctuation"
            android:defaultValue="-1"
            app:argType="integer" />

        <argument
            android:name="teamAverage"
            android:defaultValue="-1"
            app:argType="float" />

        <argument
            android:name="formationId"
            android:defaultValue="-1"
            app:argType="integer" />

        <action
            android:id="@+id/action_scoreGameDialog_to_home_fragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />

    </dialog>

</navigation>